MIT-877: Fix padding on top and bottom of collapsed notice.

--- a/components/toggleNotice/toggleNotice.css
+++ b/components/toggleNotice/toggleNotice.css
@@ -5,7 +5,13 @@
   flex-flow: row nowrap;
   margin-bottom: rem(20);
   margin-top: rem(30);
+  padding-bottom: 0;
   position: relative;
+
+  &.collapsed {
+    margin-bottom: rem(10);
+    margin-top: rem(10);
+  }
 }
 
 .button {
